--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "firebase": "^7.16.1",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.5.1",
     "lodash.debounce": "^4.0.8",
