--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-resizable": "^1.10.1",
     "react-router": "^5.2.0"
   }
 }
